# loirs-os

./: Cargo.toml  target-arm64-macos.json
.cargo/: config.toml
src/: main.rs
