[package]
name = "loirs-os"
version = "0.1.0"
edition = "2018"
authors = ["Lois <loisisar@outlook.com>"]

# Compile target on Bare Metal 
# cargo build --target thumbv7em-none-eabihf
#

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
